tests/resource/invalid/type/definition/reassign_non_mut.mamba
class A
    def my_num: Int := 10


def fin a := A()
a.my_num := 20
